--- a/index.html
+++ b/index.html
@@ -15,12 +15,21 @@
 </head>
 <body>
     <div class="UPCasteEq_wrapper">
-        <div class="UPCasteEq_model_blackout"></div>
-        <div class="UPCasteEq_model">
+        <div class="UPCasteEq_model_blackout" style="display: block;"></div>
+        <div class="UPCasteEq_model" style="display: block;">
             <div class="UPCasteEq_model_inner">
                 <button id="closeModel">X</button>
                 <div class="UPCasteEq_model_content">
-                    Model content was goes here.
+                    <div class="methodology">
+                        <h2>Methodology</h2>
+                        <p>Eight filters have been used to calculate the winning probability of the candidate based on the combination of factors
+                        that a user selects.</p>
+                        <p>These parameters include anti-incumbency, winning margin in the previous assembly election, caste of the candidate,
+                        voters' party preference, SC population, and caste-wise party preferences. Each parameter is assigned with a certain
+                        value based on the previous election results and voter preferences in the respective category. Further, the consolidated
+                        result of all these parameters is the outcome i.e. “winning probability” of the candidate under chosen conditions.</p>
+                        <p>These results do not claim the absolute victory but the possibility of victory based on selected parameters.</p>
+                    </div>
                 </div>
             </div>
         </div>
