hide model block

--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 </head>
 <body>
     <div class="UPCasteEq_wrapper">
-        <div class="UPCasteEq_model_blackout" style="display: block;"></div>
-        <div class="UPCasteEq_model" style="display: block;">
+        <div class="UPCasteEq_model_blackout" style="display: none;"></div>
+        <div class="UPCasteEq_model" style="display: none;">
             <div class="UPCasteEq_model_inner">
                 <button id="closeModel">X</button>
                 <div class="UPCasteEq_model_content">
