add helper text to third parameter

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                 <select name="" class="upcaste_dropdown" id="candCaste">
                     <option>Select caste</option>
                 </select>
-                <!-- <span>choose category</span> -->
+                <span class="dom-voters-text">Dominant voters in constituency</span>
                 <select name="" class="upcaste_dropdown" id="candCategory">
                     <option>Select category</option>
                 </select>
