--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="col">
                 <!-- <span>Choose Phase</span> -->
                 <select name="" class="upcaste_dropdown" id="phase">
-                    <option>Select Phase</option>
+                    <option value="Select phase">Select Phase</option>
                     <option value="Phase-1">Phase 1</option>
                     <option value="Phase-2">Phase 2</option>
                     <option value="Phase-3">Phase 3</option>
@@ -65,7 +65,7 @@
             <div class="col">
                 <!-- <span>Choose Phase</span> -->
                 <select name="" class="upcaste_dropdown" id="constituency">
-                    <option>Select constituency</option>
+                    <option value="Select constituency">Select constituency</option>
                 </select>
             </div>
         </div>
