--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                         value based on the previous election results and voter preferences in the respective category. Further, the consolidated
                         result of all these parameters is the outcome i.e. “winning probability” of the candidate under chosen conditions.</p>
                         <p>These results do not claim the absolute victory but the possibility of victory based on selected parameters.</p>
+                        <p style="border-top: 1px solid #000; margin: 10px auto 0 auto;width: 80%;padding-top: 10px;"><b>Concept and data modelling:</b> Akash Gulankar, Partha Das, Varun Sharma | <b>Development:</b> Eunice Elizabeth Dhivya | <b>Design:</b> Prathap Ravishankar</p>
                     </div>
                     <div id="result" style="display: none;">
                         <p>Selected parameters</p>
