fixed caps issue

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
                     <div id="result" style="display: none;">
                         <p>Selected parameters</p>
                         <div class="result_header">
-                            <div><b>constituency</b> <span id="chosenConst"></span></div>
-                            <div><b>party</b> <span id="chosenParty"></span></div>
+                            <div><b>Constituency</b> <span id="chosenConst"></span></div>
+                            <div><b>Party</b> <span id="chosenParty"></span></div>
                             <div><b>Caste</b> <span id="chosenCaste"></span></div>
                         </div>
                         <div class="result_body">
