remove choose category parameter

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="css/upcasteeq.css">
 </head>
 <body>
+    <div id="error"></div>
     <div class="UPCasteEq_wrapper">
         <div class="UPCasteEq_model_blackout" style="display: none;"></div>
         <div class="UPCasteEq_model" style="display: none;">
@@ -83,6 +84,7 @@
                 </ul>
             </div>
             <div class="filters col">
+                <p class="UPCasteEq_desc">In 2017 the winninng candidate was from <span id="won2017"></span> party and <span id="caste2017"></span> the community.</p>
                 <!-- <span>choose party</span> -->
                 <select name="" class="upcaste_dropdown" id="candParty">
                     <option>Select party</option>
@@ -91,10 +93,10 @@
                 <select name="" class="upcaste_dropdown" id="candCaste">
                     <option>Select caste</option>
                 </select>
-                <span class="dom-voters-text">Dominant voters in the constituency</span>
+                <!-- <span class="dom-voters-text">Dominant voters in the constituency</span>
                 <select name="" class="upcaste_dropdown" id="candCategory">
                     <option>Select category</option>
-                </select>
+                </select> -->
             </div>
         </div>
         <div class="row">
