add sentence with 2017 winner info

--- a/index.html
+++ b/index.html
@@ -84,7 +84,8 @@
                 </ul>
             </div>
             <div class="filters col">
-                <p class="UPCasteEq_desc">In 2017 the winninng candidate was from <span id="won2017"></span> party and <span id="caste2017"></span> the community.</p>
+                <!-- <p class="UPCasteEq_desc">In 2017 the winninng candidate was from <span id="won2017"></span> party and <span id="caste2017"></span> the community.</p> -->
+                <p class="UPCasteEq_desc">In 2017 the winninng candidate was <span id="name2017">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> from <span id="won2017">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> party and <span id="caste2017">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</span> community</p>
                 <!-- <span>choose party</span> -->
                 <select name="" class="upcaste_dropdown" id="candParty">
                     <option>Select party</option>
