enable form validation for const, party and caste vals

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                 <span>100%</span>
             </div>
         </div>
+        <p id="errors"></p>
         <div class="UPCasteEq_buttons">
             <button id="submit">Submit</button>
             <button id="reset">Reset</button>
